--- a/start.html
+++ b/start.html
@@ -9,5 +9,6 @@
 <body>
     <h1>My start file is not index.html file</h1>
     <h3>New Statement</h3>
+    <img src="vintage.jpg" alt="">
 </body>
 </html>
